refactored reading bytes to be compatible with java 8